# geoclaw-landspill

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  Singularity  calculatevolume.py  codemeta.json  createhydro.py  createnc.py  createtopo.py  plotdepths.py  pphelper.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  run.py  setup.py  tox.ini
.github/workflows/: ci.yml
Dockerfiles/: Dockerfile  Dockerfile.bionic  Dockerfile.trusty  Dockerfile.v0.1.bionic  Dockerfile.v0.1.trusty
Singularityfiles/: Singularity.bionic  Singularity.trusty  Singularity.v1.0.dev1
cases/: README.md
cases/utah-flat-gasoline/: setrun.py
cases/utah-flat-gasoline-no-evap/: setrun.py
cases/utah-flat-maya/: setrun.py
cases/utah-flat-maya-no-evap/: setrun.py
cases/utah-hill-maya/: setrun.py
cases/utah-hill-maya-no-hydro/: setrun.py
cases/utah-structures/: roughness.txt
cases/utah-structures-maya/: setrun.py
cases/utah-waterbody-gasoline/: setrun.py
cases/utah-waterbody-gasoline-no-evap/: setrun.py
cases/utah-waterbody-maya/: setrun.py
cases/utah-waterbody-maya-no-evap/: setrun.py
cases/utah_gasoline/: setrun.py
cases/utah_gasoline_no_evaporation/: setrun.py
cases/utah_hill_maya/: setrun.py
cases/utah_hill_maya_no_hydro/: roughness.txt  setrun.py
cases/utah_hydrofeatures_gasoline/: setrun.py
cases/utah_hydrofeatures_gasoline_no_evaporation/: setrun.py
cases/utah_hydrofeatures_maya/: setrun.py
cases/utah_hydrofeatures_maya_no_evaporation/: setrun.py
cases/utah_maya/: setrun.py
cases/utah_maya_no_evaporation/: setrun.py
conda/: meta.yaml
doc/: configuration.md  container.md  deps_install_tests.md  usage.md
gclandspill/: CMakeLists.txt  __init__.py  __main__.py  _misc.py  _preprocessing.py  data.py
gclandspill/_postprocessing/: calc.py  netcdf.py  plotdepth.py
gclandspill/src/: amr2.f90  flag2refine2.f90  landspill_module.f90  setaux.f90  stepgrid.f  update.f90
gclandspill/src/optimized/: stepgrid.f
geoclaw-landspill/: CMakeLists.txt  __init__.py  __main__.py  _create_data.py  _misc.py  _postprocessing.py  _preprocessing.py  calculatevolume.py  createhydro.py  createtopo.py  data.py  plotdepths.py  plottopos.py  pphelper.py  run.py
geoclaw-landspill/_postprocessing/: __init__.py  calc.py  netcdf.py  plot.py  plotdepth.py  plottopo.py  volumes.py
geoclaw-landspill/src/optimized/: flag2refine2.f90
paper/: paper.bib  paper.md
solver/: Makefile
src/: amr2.f90  flag2refine2.f90  tick.f
src/optimized/: flag2refine2.f90
tests/: test_fortran_bin.py  test_main.py  test_regression_1.py  test_regression_2.py  test_run.py
tests/data/regression-1/: fort.a0000  fort.a0001  fort.a0002  fort.a0003  fort.a0004  fort.a0005  fort.b0000  fort.b0001  fort.b0002  fort.b0003  fort.b0004  fort.b0005  fort.q0000  fort.q0001  fort.q0002  fort.q0003  fort.q0004  fort.q0005  fort.t0001  fort.t0002  fort.t0003  fort.t0004  fort.t0005  regression-1.nc  volumes.csv
tests/data/regression-2/: fort.a0000  fort.a0001  fort.a0002  fort.a0003  fort.a0004  fort.a0005  fort.b0000  fort.b0001  fort.b0002  fort.b0003  fort.b0004  fort.b0005  fort.q0000  fort.q0001  fort.q0002  fort.q0003  fort.q0004  fort.q0005  fort.t0000  fort.t0001  fort.t0002  fort.t0003  fort.t0004  fort.t0005  regression-2.nc  removed_fluid.csv  volumes.csv
utah_gasoline/: setrun.py
utah_gasoline_no_evaporation/: plotframes.py  setrun.py
utah_hill_maya/: Makefile  setrun.py  writenc.py
utah_hydrofeatures_gasoline/: setrun.py
utah_hydrofeatures_gasoline_no_evaporation/: setrun.py
utah_hydrofeatures_maya/: setrun.py
utah_hydrofeatures_maya_no_evaporation/: plotframes.py  setrun.py
utah_maya/: setrun.py
utah_maya_no_evaporation/: setrun.py
utilities/: calculatevolume.py  createhydro.py  createnc.py  createtopo.py  plotdepths.py  plottopos.py  pphelper.py  run.py
